# BlueSkyStudy

./: Cargo.toml  README.md  dev.sh  lefthook.yml
mocks/: app_state.json
src/: handlers.rs  lib.rs  main.rs  routes.rs  state.rs
src/types/: aliases.rs  mod.rs  requests.rs  responses.rs
tests/: events.rs  look.rs  mock.rs
