[package]
name = "bluesky"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-test = "17"
dashmap = "6.1"
serde_json = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1", features = ["v4"] }
